fix skills layout on mobile view

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -119,24 +119,30 @@
 .skills {
     display: flex;
     flex-direction: row;
-    gap: 4em;
+    gap: 1em;
+    justify-content: center;
 }
 
 .skills_sprites {
-    width: 10vw;
-    height: 10vh;
-    margin-bottom: 0.5em;
+    /* https://stackoverflow.com/questions/25940741/making-svg-responsive */
+    width: 8.2em;
+    height: 8.2em;
 }
 
 /* media queries */
 
-@media screen and (min-width <= 23.4375em) {
+@media screen and (min-width: 23.4375em) {
     .project_info_link {
         margin: 1rem;
     }
 
     .project_info_icon {
         justify-self: center;
+    }
+
+    .skills_sprites {
+        min-width: 16%;
+        height: auto;
     }
 }
 
@@ -145,7 +151,7 @@
 
 @media screen and (min-width: 64em) {
     .project_info_icon {
-        justify-self: end;
+        justify-self: self-end;
         margin-top: -3.5em;
     }
 }
